--- a/index.html
+++ b/index.html
@@ -4,56 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sheets API</title>
-    <script src="https://apis.google.com/js/api.js"></script>
     <script>
-        const CLIENT_ID = 'YOUR_CLIENT_ID';
-        const API_KEY = 'YOUR_API_KEY';
-        const DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
-        const SCOPES = "https://www.googleapis.com/auth/spreadsheets"];
+        const apiKey = 'AIzaSyA4R0bSzJh_OddeOLIwo3HOCNPy4jK7Sjw'; // Your API Key
+        const spreadsheetId = '1bKq3Qyb2FGDtjpSq8NqEQrdL6lhDEa9whZ3A3WHCYrw'; // Correct Sheet ID
+        const range = 'Sheet1!A1:Z100';
 
-        function handleClientLoad() {
-            gapi.load('client:auth2', initClient);
-        }
-
-        function initClient() {
-            gapi.client.init({
-                apiKey: API_KEY,
-                clientId: CLIENT_ID,
-                discoveryDocs: DISCOVERY_DOCS,
-                scope: SCOPES
-            }).then(() => {
-                updateSheet(); // Directly call updateSheet without requiring sign-in
-            });
-        }
-
-        function updateSheet() {
-            const spreadsheetId = 'YOUR_SPREADSHEET_ID';
-            const range = 'Sheet1!A1';
-            const valueInputOption = 'RAW';
-            const values = [
-                ["Hello", "World"]
-            ];
-
+        async function updateSheet() {
+            const url = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${range}?key=${apiKey}`;
             const body = {
-                values: values
-            };
-
-            gapi.client.sheets.spreadsheets.values.update({
-                spreadsheetId: spreadsheetId,
                 range: range,
-                valueInputOption: valueInputOption,
-                resource: body
-            }).then((response) => {
-                console.log('Sheet updated', response);
-            }, (error) => {
-                console.error('Error updating sheet', error);
+                majorDimension: "ROWS",
+                values: [
+                    ["Hello", "World"]
+                ]
+            };
+            
+            const response = await fetch(url, {
+                method: 'PUT',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(body)
             });
+
+            if (response.ok) {
+                console.log('Sheet updated successfully');
+            } else {
+                console.error('Error updating sheet:', response.statusText);
+            }
         }
 
-        document.addEventListener('DOMContentLoaded', handleClientLoad);
+        window.onload = () => {
+            document.getElementById('updateSheet').onclick = updateSheet;
+        };
     </script>
 </head>
 <body>
     <button id="updateSheet">Update Sheet</button>
 </body>
 </html>
+
