--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Google Sheets API</title>
     <script src="https://apis.google.com/js/api.js"></script>
     <script>
-        const CLIENT_ID = '209608535589-4f6ooodahgobog59c9bech7r71trejrp.apps.googleusercontent.com'; // Your OAuth 2.0 Client ID
+        const CLIENT_ID = '209608535589-2ogevuj027altvkcl2n8eucpgmr595gk.apps.googleusercontent.com'; // Your new OAuth 2.0 Client ID
         const API_KEY = 'AIzaSyA4R0bSzJh_OddeOLIwo3HOCNPy4jK7Sjw'; // Your API Key
         const DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
         const SCOPES = "https://www.googleapis.com/auth/spreadsheets";
@@ -25,15 +25,21 @@
                 document.getElementById('signIn').onclick = handleAuthClick;
                 document.getElementById('signOut').onclick = handleSignOutClick;
                 document.getElementById('updateSheet').onclick = updateSheet;
+            }).catch(error => {
+                console.error('Error during gapi.client.init:', error);
             });
         }
 
         function handleAuthClick(event) {
-            gapi.auth2.getAuthInstance().signIn();
+            gapi.auth2.getAuthInstance().signIn().catch(error => {
+                console.error('Error during sign-in:', error);
+            });
         }
 
         function handleSignOutClick(event) {
-            gapi.auth2.getAuthInstance().signOut();
+            gapi.auth2.getAuthInstance().signOut().catch(error => {
+                console.error('Error during sign-out:', error);
+            });
         }
 
         async function updateSheet() {
@@ -58,10 +64,10 @@
                 if (response.status === 200) {
                     console.log('Sheet updated successfully', response);
                 } else {
-                    console.error('Error updating sheet', response);
+                    console.error('Error updating sheet:', response);
                 }
             } catch (error) {
-                console.error('Caught an error:', error);
+                console.error('Caught an error during updateSheet:', error);
             }
         }
 
