--- a/successful payment.html
+++ b/successful payment.html
@@ -19,7 +19,8 @@
 <body>
     <div>
         <p>Payment Successful | عملية دفع ناجحة</p>
-        <p>Wait for 2 minutes for your BOQs Credit to be activated | انتظر حوالي دقيقتين لتفعيل رصيدك من المقايسات</p>
+        <p>Wait for half minute then close Credit buying form in Excel for your BOQs Credit to be activated | انتظر حوالي نصف دقيقة و اغلق نافذة الشراء من الاكسيل  لتفعيل رصيدك من المقايسات</p>
     </div>
 </body>
 </html>
+
