--- a/BOQ.html
+++ b/BOQ.html
@@ -469,8 +469,9 @@
     }
 
     function watchDemo() {
-      window.open('https://www.youtube.com/watch?v=YOUR_VIDEO_ID', '_blank');
+      window.open('https://youtube.com/@ugcboq?si=Cj9DAVADKbakDWVF', '_blank');
     }
   </script>
 </body>
+
 </html>
