Fix HTML encoding issues in BOQ.html

--- a/BOQ.html
+++ b/BOQ.html
@@ -469,9 +469,10 @@
     }
 
     function watchDemo() {
-      window.open('https://youtube.com/@ugcboq?si=Cj9DAVADKbakDWVF', '_blank');
+      window.open('https://youtube.com/@ugcboq?si=sLF5x2kvVzn7RUw3', '_blank');
     }
   </script>
 </body>
 
 </html>
+
