Fix HTML encoding issues in BOQ.html

--- a/BOQ.html
+++ b/BOQ.html
@@ -469,10 +469,11 @@
     }
 
     function watchDemo() {
-      window.open('https://youtube.com/@ugcboq?si=sLF5x2kvVzn7RUw3', '_blank');
+      window.open('https://youtube.com/shorts/CZIkv5D87To?si=U5EdEPyUypxpQU42', '_blank');
     }
   </script>
 </body>
 
 </html>
+
 
